    confirmation page after a change in the REMOTE_USER cookie.

 *) Fix a coding error in login.fcgi when redisplaying the confirmation
    page fails.  Thanks to pod for the report.

 *) Fix an off-by-one error in error code to error string mapping in
    WebKDC::WebKDCException that resulted in incorrect error names in
    WebLogin error messages.  Thanks to pod for the report.

 *) Update the INSTALL documentation for obtaining keytabs for Stanford
    users to reference wallet instead of leland_srvtab.

WebAuth 3.6.0 (2008-03-22)

 *) Allocate all note keys and values in the top-most request pool in
    mod_webauth, avoiding problems with prematurely freed internal data
    structures.  This fixes problems with checking access permissions of
    subdirectories in mod_autoindex and may have fixed problems elsewhere.
    Thanks to Ian Ward Comfort for the patch.

 *) Add the WebKdcLocalRealms configuration option to mod_webkdc, which
    specifies the transformation behavior for authenticated identities.
    The default is "local", which runs krb5_aname_to_localname and uses
    the result as the authenticated identity (matching previous behavior).
    Setting it to "none" always keeps the fully-qualified Kerberos
    principal as the authenticated identity, and setting it to a list of
    realms strips the realm if it matches one of the listed realms and
    uses the fully-qualified Kerberos principal otherwise.

    Thanks to Dmitri Priimak for the patch.

 *) Add the WebKdcPermittedRealms configuration option to mod_webkdc.  If
    set, only Kerberos principals in the listed realms will be able to
    obtain authentication tokens from the WebKDC.  This allows sites with
    Kerberos cross-realm trust to prevent users in foreign realms from
    obtaining WebAuth credentials that satisfy "require valid-user".

    Thanks to Dmitri Priimak for the patch.

 *) Add an additional check to webkdcProxyTokenRequest processing in